# ncnn

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  book_scene_classify.cpp  cvt_inage2bin.cpp  print_data.h
examples/book_classify/: BSclassify.cpp  CMakeLists.txt  demo.cpp
examples/crnn/: CMakeLists.txt  crnn_chinese.cpp  demo_crnn.cpp  edit_dis.cpp  interface_crnn.cpp
examples/face_recognition/: CMakeLists.txt  demo.cpp  detect_face.cpp  evaluate.cpp  face_recognization.h  interface_face.cpp
examples/image_caption/: CMakeLists.txt  demo.cpp  demo_pre.cpp  encoder_forward.c  image_caption (复件).cpp  image_caption.cpp  image_caption.h  resnet.c  www
examples/test/: CMakeLists.txt  WORDMAP.json  resnet.c  test.cpp  test_backup.cpp  test_forreview.cpp  test_v1.cpp
images/face_recognition/: bbox.xy
models/caffe/: book_scene_classify.prototxt  labelmap.txt
src/: CMakeLists.txt
src/layer/: bilstm.cpp  bilstm.h  bilstm_fc.cpp  bilstm_fc.h  binaryop.cpp  concat.cpp  dimop.cpp  dimop.h  embed.cpp  fullyconnected.cpp  fullyconnected.h  lstmcell.cpp  lstmcell.h  permute.cpp  pooling.cpp  pooling.h  sigmoid.cpp  softmax.cpp  softmax.h
toolchains/: aarch64-linux-gnu.toolchain.cmake  himix100.toolchain.cmake
tools/mxnet/: mxnet2ncnn.cpp
