set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#add_definitions(-DARM_HISI)
#ADD_LIBRARY(BSclassify STATIC BSclassify.cpp)
add_executable(demo_chinese crnn_chinese.cpp)
target_link_libraries(demo_chinese ncnn dlib::dlib ${OpenCV_LIBS})
#add_executable(demo_english crnn_english.cpp)
#target_link_libraries(demo_english ncnn dlib::dlib)
