ADD_LIBRARY(imageCaption STATIC image_caption.cpp)
ADD_LIBRARY(cJson STATIC cJSON.c)
add_executable(demo_imgcap demo.cpp)

option(ARM_HISI "ARM_HISI BUILD" ON)
if(ARM_HISI)
    add_definitions(-DARM_HISI)
    set(NNIE_DIR "${CMAKE_SOURCE_DIR}/nnie")
    file(GLOB NNIE_LIB ${CMAKE_SOURCE_DIR}/nnie/*.a)
    if(NOT NNIE_LIB)
        message(STATUS "unable to find NNIE_LIB")
    endif(NOT NNIE_LIB)
    message(STATUS "NNIE_LIB=${NNIE_LIB}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ldl")
    target_link_libraries(demo_imgcap imageCaption ncnn cJson dlib::dlib ${NNIE_DIR}/libencoder.a ${NNIE_DIR}/libmpi.b ${NNIE_LIB})#${OpenCV_LIBS})
else()
    message(STATUS "x86")
    target_link_libraries(demo_imgcap imageCaption ncnn cJson dlib::dlib)#${OpenCV_LIBS})
endif()
